@@ -9,7 +9,9 @@ function DemodulatorPanel(el) {
     var displayEl = el.find('.webrx-actual-freq')
     this.tuneableFrequencyDisplay = displayEl.tuneableFrequencyDisplay();
     displayEl.on('frequencychange', function(event, freq) {
-        self.getDemodulator().set_offset_frequency(freq - self.center_freq);
+        var demod = self.getDemodulator();
+        var delta = demod.get_modulation() === 'cw'? UI.getCwOffset() : 0;
+        demod.set_offset_frequency(freq - self.center_freq - delta);
     });
 
     this.mouseFrequencyDisplay = el.find('.webrx-mouse-freq').frequencyDisplay();
@@ -129,7 +131,8 @@ DemodulatorPanel.prototype.setMode = function(requestedModulation, underlyingMod
 
     var self = this;
     var updateFrequency = function(freq) {
-        self.tuneableFrequencyDisplay.setFrequency(self.center_freq + freq);
+        var delta = self.demodulator.get_modulation() === 'cw'? UI.getCwOffset() : 0;
+        self.tuneableFrequencyDisplay.setFrequency(self.center_freq + freq + delta);
         self.updateHash();
     };
     this.demodulator.on("frequencychange", updateFrequency);
